Update PIC properties

--- a/students/convert_students.properties
+++ b/students/convert_students.properties
@@ -71,6 +71,7 @@ field_homeroom={4,omit}
 field_birthdate={7,omit}
 field_username={8,omit}
 field_emailPrimary={8}@student.ssis-suzhou.net
+field_password={9,omit}
 
 #------------------------------------------------------------
 # Define the specialized mapping values for the input data
@@ -134,4 +135,4 @@ map_siteShortName_12=SSIS-SEC
 # the incoming data in a given CSV field.  Please refer to
 # the configuration guide for valid values.
 #------------------------------------------------------------
-field_type_total=8
+field_type_total=9
