--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .DS_Store
 faculty/faculty-fixed.csv
+faculty/faculty-processed.csv
 faculty/faculty-log.txt
 faculty/faculty.csv
 faculty/faculty.xml
 students/students-log.txt
 students/students.csv
 students/students.xml
+students/students-processed.csv
 Tools
