Update students file for new site shortnames

--- a/students/update_students.properties
+++ b/students/update_students.properties
@@ -1,7 +1,6 @@
-# These settings are used when importing the convered XML
-# file into Destiny
+# Path to the update file.
+patronFile = students.xml
 
-#patronFile = ../patdata/destiny_students.xml
 
 # Enter the user name and password of the user with
 # the ability to edit patrons.
@@ -9,12 +8,10 @@
 username = patimport
 password = 8502312
 
-# Set true to allow patrons to be deleted even if they have outstanding
-# transactions.
-deletePatronsWithTransactions = false
-deletionsProperty = false
-
-
 # Set true to allow job summary to only print errors and warnings.  Setting
 # it to false will display all messages in the job summary.
 limitToErrorsAndWarnings = false
+
+# Set true to allow patrons to be deleted even if they have outstanding
+# transactions.
+deletePatronsWithTransactions = false
