Update faculty convert

--- a/faculty/convert_faculty.properties
+++ b/faculty/convert_faculty.properties
@@ -66,7 +66,7 @@ field_districtID={1,omit}
 field_lastName={3,omit}
 field_firstName={2,omit}
 field_patronType={6,map_patronType,omit}
-field_accessLevel={6,map_accessLevel,omit}
+field_accessLevel={7}
 field_status={5,map_status,omit}
 field_isTeacher={6,map_isTeacher,omit}
 field_username={4,regex("(\w+)\@ssis\-suzhou\.net","{$1}")}
@@ -76,10 +76,6 @@ field_emailPrimary={4,omit}
 # Define the specialized mapping values for the input data
 # in the CSV file.
 #------------------------------------------------------------
-map_accessLevel_111=Teacher
-map_accessLevel_112=Teacher
-map_accessLevel_0=Staff
-
 map_isTeacher_111=1
 map_isTeacher_112=1
 map_isTeacher_0=0
