--- a/faculty/convert_faculty.properties
+++ b/faculty/convert_faculty.properties
@@ -60,13 +60,13 @@ AssociationMax=100
 # processing (concatenated and formatted fields), please
 # refer to the configuration guide.
 #------------------------------------------------------------
-field_siteShortName={6,map_siteShortName,omit}
+field_siteShortName={7,map_siteShortName,omit}
 field_barcode=F {1}
 field_districtID={1,omit}
 field_lastName={3,omit}
 field_firstName={2,omit}
 field_patronType={6,map_patronType,omit}
-field_accessLevel={7}
+field_accessLevel={8,omit}
 field_status={5,map_status,omit}
 field_isTeacher={6,map_isTeacher,omit}
 field_username={4,regex("(\w+)\@ssis\-suzhou\.net","{$1}")}
