New student emails

--- a/students/convert_students.properties
+++ b/students/convert_students.properties
@@ -71,7 +71,7 @@ field_homeroom={4,omit}
 field_birthdate={7,omit}
 field_username={1,omit}
 field_password={9,omit}
-field_emailPrimary={8}@student.ssis-suzhou.net
+field_emailPrimary={1}@mail.ssis-suzhou.net
 
 #------------------------------------------------------------
 # Define the specialized mapping values for the input data
