Set grade level in Destiny

--- a/students/convert_students.properties
+++ b/students/convert_students.properties
@@ -63,6 +63,7 @@ AssociationMax=100
 field_siteShortName={3,map_siteShortName,omit}
 field_barcode={3,map_barcode,omit}
 field_districtID={1,omit}
+field_gradeLevel={3}
 field_lastName={5,omit}
 field_firstName={6,omit}
 field_patronType={3,map_patronType,omit}
