Add gender and grad year

--- a/students/convert_students.properties
+++ b/students/convert_students.properties
@@ -70,8 +70,10 @@ field_patronType={3,map_patronType,omit}
 field_accessLevel=Student
 field_homeroom={4,omit}
 field_birthdate={7,omit}
+field_gender={9,omit}
+field_graduationYear={10,omit}
 field_username={1,omit}
-field_password={9,omit}
+field_password={11,omit}
 field_emailPrimary={1}@mail.ssis-suzhou.net
 
 #------------------------------------------------------------
