--- a/students/update_students.properties
+++ b/students/update_students.properties
@@ -1,6 +1,5 @@
-# Path to the update file.
-patronFile = students.xml
-
+# These settings are used when importing the convered XML
+# file into Destiny
 
 # Enter the user name and password of the user with
 # the ability to edit patrons.
@@ -8,10 +7,11 @@ patronFile = students.xml
 username = patimport
 password = 8502312
 
-# Set true to allow job summary to only print errors and warnings.  Setting
-# it to false will display all messages in the job summary.
-limitToErrorsAndWarnings = false
-
 # Set true to allow patrons to be deleted even if they have outstanding
 # transactions.
 deletePatronsWithTransactions = false
+deletionsProperty = false
+
+# Set true to allow job summary to only print errors and warnings.  Setting
+# it to false will display all messages in the job summary.
+limitToErrorsAndWarnings = false
